--- a/src/BD/AlquilerInterfaz/CRUD_CasaVacacional1.form
+++ b/src/BD/AlquilerInterfaz/CRUD_CasaVacacional1.form
@@ -265,7 +265,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField3">
+        <Component class="javax.swing.JTextField" name="txtcarro">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="170" y="130" width="150" height="-1"/>
@@ -421,6 +421,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="GUARDAR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGUARDARActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="60" y="370" width="120" height="40"/>
@@ -450,6 +453,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="ELIMINAR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEliminarActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="420" y="370" width="120" height="40"/>
@@ -463,6 +469,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="REPORTE"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReporteActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="600" y="370" width="120" height="40"/>
@@ -579,18 +588,136 @@
         <Component class="javax.swing.JComboBox" name="cbxnacionalidad_crudcasa">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="11">
-                <StringItem index="0" value="Ecuatoriano"/>
-                <StringItem index="1" value="Mexicano"/>
-                <StringItem index="2" value="Canadiense"/>
-                <StringItem index="3" value="Brasile&#xf1;o"/>
-                <StringItem index="4" value="Ucraniana"/>
-                <StringItem index="5" value="Brit&#xe1;nica"/>
-                <StringItem index="6" value="Escocesa"/>
-                <StringItem index="7" value="Finlandesa"/>
-                <StringItem index="8" value="Austriaca"/>
-                <StringItem index="9" value="Rusa"/>
-                <StringItem index="10" value="Espa&#xf1;ola"/>
+              <StringArray count="129">
+                <StringItem index="0" value="Guayaquil"/>
+                <StringItem index="1" value="Quito"/>
+                <StringItem index="2" value="Cuenca"/>
+                <StringItem index="3" value="Santo Domingo"/>
+                <StringItem index="4" value="Machala"/>
+                <StringItem index="5" value="Dur&#xe1;n"/>
+                <StringItem index="6" value="Manta"/>
+                <StringItem index="7" value="Portoviejo"/>
+                <StringItem index="8" value="Loja"/>
+                <StringItem index="9" value="Ambato"/>
+                <StringItem index="10" value="Esmeraldas"/>
+                <StringItem index="11" value="Quevedo"/>
+                <StringItem index="12" value="Riobamba"/>
+                <StringItem index="13" value="Milagro"/>
+                <StringItem index="14" value="Ibarra"/>
+                <StringItem index="15" value="La Libertad"/>
+                <StringItem index="16" value="Babahoyo"/>
+                <StringItem index="17" value="Sangolqu&#xed;"/>
+                <StringItem index="18" value="Daule"/>
+                <StringItem index="19" value="Latacunga"/>
+                <StringItem index="20" value="Tulc&#xe1;n"/>
+                <StringItem index="21" value="Chone"/>
+                <StringItem index="22" value="Pasaje"/>
+                <StringItem index="23" value="Santa Rosa"/>
+                <StringItem index="24" value="Nueva Loja"/>
+                <StringItem index="25" value="Huaquillas"/>
+                <StringItem index="26" value="El Carmen"/>
+                <StringItem index="27" value="Montecristi"/>
+                <StringItem index="28" value="Samborond&#xf3;n"/>
+                <StringItem index="29" value="Puerto Francisco de Orellana"/>
+                <StringItem index="30" value="Jipijapa"/>
+                <StringItem index="31" value="Santa Elena"/>
+                <StringItem index="32" value="Otavalo"/>
+                <StringItem index="33" value="Cayambe"/>
+                <StringItem index="34" value="Buena Fe"/>
+                <StringItem index="35" value="Ventanas"/>
+                <StringItem index="36" value="Velasco Ibarra"/>
+                <StringItem index="37" value="La Troncal"/>
+                <StringItem index="38" value="El Triunfo"/>
+                <StringItem index="39" value="Salinas"/>
+                <StringItem index="40" value="General Villamil"/>
+                <StringItem index="41" value="Azogues"/>
+                <StringItem index="42" value="Puyo"/>
+                <StringItem index="43" value="Vinces"/>
+                <StringItem index="44" value="La Concordia"/>
+                <StringItem index="45" value="Rosa Z&#xe1;rate"/>
+                <StringItem index="46" value="Balzar"/>
+                <StringItem index="47" value="Naranjal"/>
+                <StringItem index="48" value="Guaranda"/>
+                <StringItem index="49" value="La Man&#xe1;"/>
+                <StringItem index="50" value="Tena"/>
+                <StringItem index="51" value="San Lorenzo"/>
+                <StringItem index="52" value="Catamayo"/>
+                <StringItem index="53" value="El Guabo"/>
+                <StringItem index="54" value="Pedernales"/>
+                <StringItem index="55" value="Atuntaqui"/>
+                <StringItem index="56" value="Bah&#xed;a de Car&#xe1;quez"/>
+                <StringItem index="57" value="Pedro Carbo"/>
+                <StringItem index="58" value="Macas"/>
+                <StringItem index="59" value="Yaguachi"/>
+                <StringItem index="60" value="Calceta"/>
+                <StringItem index="61" value="Arenillas"/>
+                <StringItem index="62" value="Jaramij&#xf3;"/>
+                <StringItem index="63" value="Valencia"/>
+                <StringItem index="64" value="Machachi"/>
+                <StringItem index="65" value="Shushufindi"/>
+                <StringItem index="66" value="Atacames"/>
+                <StringItem index="67" value="Pi&#xf1;as"/>
+                <StringItem index="68" value="San Gabriel"/>
+                <StringItem index="69" value="Gualaceo"/>
+                <StringItem index="70" value="Ca&#xf1;ar"/>
+                <StringItem index="71" value="Cariamanga"/>
+                <StringItem index="72" value="Ba&#xf1;os de Agua Santa"/>
+                <StringItem index="73" value="Montalvo"/>
+                <StringItem index="74" value="Macar&#xe1;"/>
+                <StringItem index="75" value="San Miguel de Salcedo"/>
+                <StringItem index="76" value="Zamora"/>
+                <StringItem index="77" value="Puerto Ayora"/>
+                <StringItem index="78" value="La Joya de los Sachas"/>
+                <StringItem index="79" value="Tosagua"/>
+                <StringItem index="80" value="Pelileo"/>
+                <StringItem index="81" value="Puerto L&#xf3;pez"/>
+                <StringItem index="82" value="San Vicente"/>
+                <StringItem index="83" value="Santa Ana"/>
+                <StringItem index="84" value="Zaruma"/>
+                <StringItem index="85" value="Rocafuerte"/>
+                <StringItem index="86" value="Cotacachi"/>
+                <StringItem index="87" value="Santa Luc&#xed;a"/>
+                <StringItem index="88" value="Puebloviejo"/>
+                <StringItem index="89" value="Portovelo"/>
+                <StringItem index="90" value="Suc&#xfa;a"/>
+                <StringItem index="91" value="Sim&#xf3;n Bol&#xed;var"/>
+                <StringItem index="92" value="Gualaquiza"/>
+                <StringItem index="93" value="Paute"/>
+                <StringItem index="94" value="San Miguel"/>
+                <StringItem index="95" value="Puerto Baquerizo Moreno"/>
+                <StringItem index="96" value="Catacocha"/>
+                <StringItem index="97" value="Palenque"/>
+                <StringItem index="98" value="Alaus&#xed;"/>
+                <StringItem index="99" value="Santa Isabel"/>
+                <StringItem index="100" value="Biblian"/>
+                <StringItem index="101" value="Valdez (Limones)"/>
+                <StringItem index="102" value="El Tambo"/>
+                <StringItem index="103" value="Quinsaloma"/>
+                <StringItem index="104" value="El &#xc1;ngel\n"/>
+                <StringItem index="105" value="Chordeleg"/>
+                <StringItem index="106" value="Saraguro"/>
+                <StringItem index="107" value="Gir&#xf3;n"/>
+                <StringItem index="108" value="Pichincha"/>
+                <StringItem index="109" value="Sigsig"/>
+                <StringItem index="110" value="Loreto"/>
+                <StringItem index="111" value="Rioverde"/>
+                <StringItem index="112" value="Zumba"/>
+                <StringItem index="113" value="Bol&#xed;var"/>
+                <StringItem index="114" value="Sucre"/>
+                <StringItem index="115" value="Guamote"/>
+                <StringItem index="116" value="Cevallos"/>
+                <StringItem index="117" value="San Fernando"/>
+                <StringItem index="118" value="Santa Clara"/>
+                <StringItem index="119" value="Nab&#xf3;n"/>
+                <StringItem index="120" value="La Victoria"/>
+                <StringItem index="121" value="Guachapala"/>
+                <StringItem index="122" value="Santiago"/>
+                <StringItem index="123" value="Chaguarpamba"/>
+                <StringItem index="124" value="O&#xf1;a"/>
+                <StringItem index="125" value="Sevilla de Oro"/>
+                <StringItem index="126" value="Olmedo"/>
+                <StringItem index="127" value="D&#xe9;leg"/>
+                <StringItem index="128" value="El Pan"/>
               </StringArray>
             </Property>
           </Properties>
@@ -600,6 +727,60 @@
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="600" y="260" width="-1" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton1">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/imagenes/busqueda.png"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="370" y="70" width="-1" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="CbxFiltrarbsuque">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="4">
+                <StringItem index="0" value="ID Casa"/>
+                <StringItem index="1" value="ID Propiedad"/>
+                <StringItem index="2" value="Otros Detalles"/>
+                <StringItem index="3" value=" "/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CbxFiltrarbsuqueActionPerformed"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="670" y="70" width="100" height="-1"/>
+            </Constraint>
+          </Constraints>
+        </Component>
+        <Component class="javax.swing.JButton" name="BtnBuscarFiltro">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="BUSCAR"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnBuscarFiltroActionPerformed"/>
+          </Events>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+              <AbsoluteConstraints x="370" y="130" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
